--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container">
     <div style="margin-top: 35px; text-align: center;">
-        <a href='@Url.Action("Index", "Budgets")' ; class="waves-effect waves-light btn-large greyBudgetBtn"><i class="far fa-arrow-alt-circle-left" style="margin-right: 5px;"></i> Return to Budget</a>
+        <a href='@Url.Action("Index", "Budgets")' ; class="waves-effect waves-light btn-large greyBudgetBtn"><i class="far fa-arrow-alt-circle-left" style="margin-right: 5px;"></i> Return to Budget Dashboard</a>
     </div>
     <h4 style="margin: 50px; text-align:center"><i class="fas fa-plus-circle"></i> Add a Transaction</h4>
     <div class="container" style="margin-top: 20px;">
