--- a/MyWebsite/Views/Budgets/Edit.cshtml
+++ b/MyWebsite/Views/Budgets/Edit.cshtml
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col l12 m12 s12" align="center" style="margin-top:15px;">
         <a href='@Url.Action("Index", "Budgets", new {userName = user})' class="waves-effect waves-light btn-large greyBudgetBtn" style="margin-top: 10px;">
-            <i class="far fa-arrow-alt-circle-left" style="margin-right: 5px;"></i> Return to Budget
+            <i class="far fa-arrow-alt-circle-left" style="margin-right: 5px;"></i> Return to Budget Dashboard
         </a>
     </div>
 </div>
