--- a/MyWebsite/Views/Budgets/PastBudgets.cshtml
+++ b/MyWebsite/Views/Budgets/PastBudgets.cshtml
@@ -8,7 +8,7 @@
 <div class="container">
     <div style="margin-top:25px; text-align:center;">
         <p class="greenCenterTxt">@ViewBag.Deleted</p>
-        <a href='@Url.Action("Index", "Budgets", new { userName = user })' ; class="waves-effect waves-light btn-large greyBudgetBtn"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+        <a href='@Url.Action("Index", "Budgets", new { userName = user })' ; class="waves-effect waves-light btn-large greyBudgetBtn"><i class="material-icons left">arrow_back</i>Return to Budget Dashboard</a>
     </div>
 
     <h4 style="margin-top:55px; margin-bottom:25px; text-align:center">Past Budgets</h4>
