--- a/MyWebsite/Views/Budgets/BudgetInsights.cshtml
+++ b/MyWebsite/Views/Budgets/BudgetInsights.cshtml
@@ -3,10 +3,14 @@
 <div class="partialLoginText"><p>@Html.Partial("_LoginPartial", 1)</p></div>
 <h3 class="painlessBudgetTitle">The Painless Budget</h3>
 <div style="margin-top: 25px; text-align: center;">
-    <a href='@Url.Action("Index", "Budgets")' ; class="waves-effect waves-light btn-large greyBudgetBtn"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+    <a href='@Url.Action("Index", "Budgets")' ; class="waves-effect waves-light btn-large greyBudgetBtn"><i class="material-icons left">arrow_back</i>Return to Budget Dashboard</a>
 </div>
 
 <h4 style="margin: 50px; text-align:center"><i class="far fa-chart-bar"></i> Budget Insights</h4>
+@if(ViewBag.NotEnoughInfoMsg != null)
+{
+    <h5 class="container flow-text" style="text-align: center">@ViewBag.NotEnoughInfoMsg</h5>
+}
 
 <div class="row" style="padding: 60px;">
     <div class="col s12">
