--- a/MyWebsite/Views/Home/Index.cshtml
+++ b/MyWebsite/Views/Home/Index.cshtml
@@ -6,24 +6,26 @@
                 <h4 class="thinBlackHeading flow-text">Currently Working With</h4>
                 <ul id="tech-used" class="techBoxes">
                     <li>C#</li>
-                    <li>ASP.NET MVC 5</li>
                     <li>ASP.NET Core</li>
-                    <li>ASP.NET Web API</li>
+                    <li>ASP.NET MVC 5</li>
+                    <li>ASP.NET Web API 2</li>
                     <li>LINQ</li>
                     <li>Entity Framework</li>
                     <li>RESTful Web Services</li>
                     <li>MS Visual Studio 2017</li>
                     <li>Microsoft SQL Server</li>
                     <li>T-SQL</li>
-                    <li>Bootstrap</li>
+                    <li>Bootstrap 4</li>
                     <li>Materialize</li>
                     <li>Kendo UI</li>
+                    <li>HTML/CSS</li>
                     <li>JavaScript</li>
                     <li>jQuery</li>
                     <li>JSON</li>
                     <li>Ajax</li>
                     <li>XML</li>
-                    <li>HTML/CSS</li>
+                    <li>Fiddler</li>
+                    <li>Postman</li>
                     <li>Git</li>
                 </ul>
             </div>
@@ -33,20 +35,59 @@
     @*Apps*@
     <h3 id="Apps" class="thinHeading">Applications</h3>
     <div class="row" style="margin-top: 100px;">
-        <div id="appsImage" class="col l12 z-depth-5">
-            <div class="darkContainer col l12 z-depth-4">
-                <div class="appBoxes z-depth-4">
-                    <h4>The Painless Budget</h4>
-                    <a href='@Url.Action("Index", "Budgets")'  class="waves-effect waves-light btn sharpCorners black-btn"><i class="fas fa-desktop"></i> View App</a>
-                    <a href='#'  class="waves-effect waves-light btn sharpCorners black-btn"><i class="fas fa-code"></i> View GitHub</a>
+        <div class="darkContainer col l12 z-depth-5">
+            <div class="appBoxes z-depth-4" style="padding: 10px;">
+                <h4 style="font-weight: 200;">The Painless Budget</h4>
+                <a href='@Url.Action("Index", "Budgets")' class="waves-effect waves-light btn sharpCorners black-btn"><i class="fas fa-desktop"></i> View App</a>
+                <a href='#' class="waves-effect waves-light btn sharpCorners black-btn"><i class="fas fa-code"></i> View GitHub</a>
+                <h4 class="flow-text" style="padding: 10px; font-weight: 200;">@ViewBag.BudgetAppDescr</h4>
+                <div class="col l10 offset-l4 col m12 offset-m3 hide-on-small-only">
+                    <ul class="collapsible" style="margin: 5px 5px 40px;">
+                        <li>
+                            <div class="collapsible-header flow-text z-depth-3"><i class="far fa-window-minimize"></i> Painless Budget Features</div>
+                            <div class="collapsible-body"><span>Create and save monthly budgets</span></div>
+                            <div class="collapsible-body"><span>Option to re-use past budget settings for next month</span></div>
+                            <div class="collapsible-body"><span>Add transactions by spending category</span></div>
+                            <div class="collapsible-body"><span>Easy to view pie charts display current budget spending by category</span></div>
+                        </li>
+                        <li>
+                            <div class="collapsible-header"><i class="far fa-window-minimize"></i>  Painless Budget Analytics</div>
+                            <div class="collapsible-body"><span>View average monthly spending, most frequent transaction category, average amount over or under budget, average savings, and category with the highest average savings.</span></div>
+                            <div class="collapsible-body"><span>View budget analytics by spending category to track which categories have the highest savings and are consistently over or under budget.</span></div>
 
-                    <p>Text here about what the app does. Here are some more sentences. Some more descriptions about the app. More text is here and here.</p>
+                        </li>
+                        <li>
+                            <div class="collapsible-header"><i class="far fa-window-minimize"></i> Painless Budget Tracking</div>
+                            <div class="collapsible-body"><span>Add, edit, and remove transactions</span></div>
+                            <div class="collapsible-body"><span>Export a single budget or all past budgets to Excel</span></div>
+                            <div class="collapsible-body"><span>View and edit transactions from previous budget months</span></div>
+                            <div class="collapsible-body"><span>View pie charts by spending category for past budget months</span></div>
+                        </li>
+                    </ul>
                 </div>
-                <div class="appBoxes">
-                    <h4>Weather Alerts</h4>
-                    <a href='@Url.Action("Index", "OpenWeather")'  class="waves-effect waves-light btn sharpCorners black-btn"><i class="fas fa-desktop"></i> View App</a>
-                    <a href='#' class="waves-effect waves-light btn sharpCorners black-btn"><i class="fas fa-code"></i> View GitHub</a>
-                    <p>Text here about what the app does. Here are some more sentences. Some more descriptions about the app. More text is here and here.</p>
+                <div class="carousel grabbing" style="margin-top: 50px;">
+                    <a class="carousel-item"><img src="~/images/painlessBudget/budget1.png" /></a>
+                    <a class="carousel-item"><img src="~/images/painlessBudget/budget2.png" /></a>
+                    <a class="carousel-item"><img src="~/images/painlessBudget/budget3.png" /></a>
+                    <a class="carousel-item"><img src="~/images/painlessBudget/budget4.png" /></a>
+                    <a class="carousel-item"><img src="~/images/painlessBudget/budget5.png" /></a>
+                    <a class="carousel-item"><img src="~/images/painlessBudget/budget6.png" /></a>
+                    <a class="carousel-item"><img src="~/images/painlessBudget/budget7.png" /></a>
+                    <a class="carousel-item"><img src="~/images/painlessBudget/budget8.png" /></a>
+                    <a class="carousel-item"><img src="~/images/painlessBudget/budget9.png" /></a>
+                </div>
+            </div>
+            <div class="appBoxes">
+                <h4>Weather Alerts</h4>
+                <a href='@Url.Action("Index", "OpenWeather")' class="waves-effect waves-light btn sharpCorners black-btn"><i class="fas fa-desktop"></i> View App</a>
+                <a href='#' class="waves-effect waves-light btn sharpCorners black-btn"><i class="fas fa-code"></i> View GitHub</a>
+                <h4 class="flow-text">Text here about what the app does. Here are some more sentences. Some more descriptions about the app. More text is here and here.</h4>
+                <div class="carousel">
+                    <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
+                    <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
+                    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
+                    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
+                    <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
                 </div>
             </div>
         </div>
@@ -61,15 +102,14 @@
             <div class="accountBox col l12 s12 z-depth-4">
                 <section>
                     <form class="acctForm" asp-route-returnurl="" method="post">
-                        <h4 class="thinBlackHeading flow-text">Send a Message</h4>
-                        <i class="far fa-user contactFormIcons"></i>
+                        <i class="far fa-user contactFormIcons"></i> 
                         <div class="input-field">
-                            <input id="Name" placeholder="Name" class="validate appBoxes" required type="text" style="width:92%" />
+                            <input id="Name" placeholder="Name" class="validate appBoxes" required type="text" style="width:100%;" />
                             <label for="Name">Name</label>
                         </div>
                         <i class="fas fa-at contactFormIcons"></i>
                         <div class="input-field">
-                            <input id="Email" placeholder="Email" class="validate appBoxes" required pattern=".*@@.*\..*" message="Please enter a valid email address." type="text" style="width:92%" />
+                            <input id="Email" placeholder="Email" class="validate appBoxes" required pattern=".*@@.*\..*" message="Please enter a valid email address." type="text" style="width:100%" />
                             <label for="Email">Email</label>
                         </div>
                         <i class="fas fa-comments contactFormIcons"></i>
@@ -92,7 +132,35 @@
 </div>
 
 <style>
+    /*Materialize overrides*/
+    .collapsible li {
+        margin: 7px !important;
+    }
 
+    .collapsible-body {
+        border-bottom: 1px dashed #020305 !important;
+        background-color: #cfd8dc !important;
+        color: black !important;
+    }
+
+    .collapsible-header {
+        text-align: center;
+        background-color: #020305 !important;
+        border-radius: 4px !important;
+        border: 1.5px solid #141d26 !important;
+    }
+
+        .collapsible-header:hover {
+            background-color: #141d26 !important;
+        }
+
+
+    .carousel-item {
+        height: 400px !important;
+        width: 600px !important;
+    }
+
+    /*Overrides for contact form*/
     .acctForm input + label {
         color: none !important;
     }
@@ -104,23 +172,27 @@
     }
 
     .acctForm input[type=text]:not(.browser-default) {
-        border: 1px solid white;
+        border: 1px solid #cfd8dc;
         background-color: #020305 !important;
         padding: 5px;
         margin: 15px;
         border-radius: 4px;
         font-size: 20px !important;
-        border-bottom: 1px solid #9e9e9e !important;
+        border-bottom: 2px solid #9e9e9e !important;
         width: 100%;
     }
 
     body {
-        background-color: #020305 !important;
+        background-color: #020305;
     }
+
 </style>
 
 <script>
-
+    $(document).ready(function () {
+        $('.carousel').carousel();
+        $('.collapsible').collapsible();
+    });
     $('#sendMsgBtn').click(function () {
         var emailRegex = /^[a-zA-Z0-9_.-]+@@[a-zA-Z0-9]+[a-zA-Z0-9.-]+[a-zA-Z0-9]+.[a-z]{0,4}$/;
         var valid = emailRegex.test($('#Email').val());
@@ -128,6 +200,5 @@
             $('.progress').show();
         }
     });
-
 </script>
 
