--- a/MyWebsite/wwwroot/css/site.css
+++ b/MyWebsite/wwwroot/css/site.css
@@ -29,6 +29,11 @@ html {
     width: 100px;
 }
 
+.grabbing {
+    cursor: -webkit-grabbing;
+    cursor: grabbing;
+}
+
 .textGrey {
     color: #cfd8dc;
     font-weight: 400;
@@ -256,6 +261,11 @@ a {
 }
 
 /*HOME*/
+.appListDescription {
+    font-size: 18px;
+    padding: 10px;
+    text-align: left;
+}
 
 #contactImage {
     background-image: url('../images/nebula.png');
@@ -295,6 +305,7 @@ a {
     padding: 5px;
     margin: 15px;
     border-radius: 4px;
+    color: white !important;
 }
 
 #gitHubIcon {
@@ -310,9 +321,10 @@ a {
 }
 
 .darkContainer {
-    background-color: #a8b3c4;
+    background-color: rgb(168, 179, 196);
+    /*background-color: #a8b3c4;*/
     text-align: center;
-    opacity: 0.6;
+    opacity: 0.7;
     border-radius: 4px;
     height: 100%;
 }
@@ -322,7 +334,7 @@ a {
     -webkit-column-count: 4;
     -moz-column-count: 4;
     column-count: 4;
-    color: #cfd8dc;
+    color: white;
     font-size: 21px;
 }
 
@@ -336,8 +348,8 @@ a {
 
 .thinBlackHeading {
     font-weight: 500;
-    font-size: 35px;
-    letter-spacing: 1.5px;
+    font-size: 37px;
+    letter-spacing: 1.3px;
     text-align: center;
     padding: 25px;
     color: black;
@@ -349,7 +361,7 @@ a {
     padding: 3px;
     margin: 5px;
     border-radius: 4px;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .appBoxes {
@@ -532,7 +544,7 @@ a {
     .acctForm input[type=text]:not(.browser-default) {
         background-color: #a8b3c4 !important;
         font-size: 20px !important;
-        border-bottom: 1px solid #9e9e9e !important;
+        border-bottom: 2px solid #9e9e9e !important;
         width: 85% !important;
     }
 
@@ -564,7 +576,7 @@ a {
 .acctForm input[type=password]:not(.browser-default) {
     background-color: #a8b3c4 !important;
     font-size: 20px !important;
-    border-bottom: 1px solid #9e9e9e !important;
+    border-bottom: 2px solid #9e9e9e !important;
 }
 
     /*Password input - onclick*/
@@ -603,7 +615,7 @@ a {
     margin-left: 10px;
     margin-bottom: 10px;
     text-transform: lowercase !important;
-    font-size: 13px !important;
+    font-size: 20px !important;
 }
 
 .partialLoginText {
