--- a/MyWebsite/wwwroot/css/site.css
+++ b/MyWebsite/wwwroot/css/site.css
@@ -517,7 +517,7 @@ a {
 
 #Message {
     border-bottom: none !important;
-    color: #9e9e9e !important;
+    color: white !important;
     margin-top: -15px;
     height: 100px;
     font-size: 20px;
@@ -528,7 +528,7 @@ a {
 
 /*Placeholder*/
 .acctForm input, .actual-edit-overlay {
-    -webkit-text-fill-color: #020305 !important;
+    -webkit-text-fill-color: white !important;
 }
 
     .acctForm input + label {
